Fix z-index.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -193,7 +193,7 @@ hr{
     z-index: 2 !important;
 }
 
-.modal.confirmation{
+#confirmation.modal{
     z-index: 3 !important;
 }
 
